--- a/plugins/plugin-debugger/che-plugin-debugger-ide/src/main/resources/org/eclipse/che/plugin/debugger/ide/DebuggerLocalizationConstant.properties
+++ b/plugins/plugin-debugger/che-plugin-debugger-ide/src/main/resources/org/eclipse/che/plugin/debugger/ide/DebuggerLocalizationConstant.properties
@@ -25,7 +25,7 @@ disconnectDebugger = End Debug Session
 stepInto = Step Into
 stepOver = Step Over
 stepOut = Step Out
-jumpToCursor = Jump to cursor
+runToCursor = Run to cursor
 suspend = Suspend
 deleteAllBreakpoints = Remove All Breakpoints
 changeVariableValue = Change Value
@@ -40,7 +40,7 @@ disconnectDebuggerDescription = End Debug Session
 stepIntoDescription = Step Into
 stepOverDescription = Step Over
 stepOutDescription = Step Out
-jumpToCursorDescription = Jump to cursor
+runToCursorDescription = Run to cursor
 suspendDescription = Suspend
 deleteAllBreakpointsDescription = Remove All Breakpoints
 changeVariableValueDescription = Change Value
