--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <che.lib.version>5.20.0-SNAPSHOT</che.lib.version>
         <che.version>5.20.0-SNAPSHOT</che.version>
         <specification.version>1.0-beta2</specification.version>
+        <version.fmt.plugin>2.0.0</version.fmt.plugin>
     </properties>
     <dependencyManagement>
         <dependencies>
